--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         </plugins>
     </build>
 
-    <groupId>com.mettler.test</groupId>
+    <groupId>com.czajor.test</groupId>
     <artifactId>test-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -38,9 +38,16 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.4.2</version>
+            <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava3</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
