--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
             <artifactId>rxjava</artifactId>
             <version>3.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.2</version>
+        </dependency>
 
 
     </dependencies>
